--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
       IMAP_PORT: $(IMAP_PORT)
       WACHEN: $(WACHEN)
       TELEGRAM_CHATIDS: $(TELEGRAM_CHATIDS)
-      BOTS_CHATIDS: $(BOTS_CHAT_ID)
-      APITOKEN: $(APIToken)
+      BOTS_CHATIDS: $(BOTS_CHATIDS)
+      APITOKEN: $(APITOKEN)
